--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,6 +2,7 @@
 run-shell "powerline-daemon -q"
 source "/usr/local/lib/python3.7/site-packages/powerline/bindings/tmux/powerline.conf"
 
+# Allow selection with the mouse
 set -g mouse on  
 
 # Set vi mode 
